Update - session register/unregister in user view + credits displaying management